--- a/css/epub-reader.css
+++ b/css/epub-reader.css
@@ -1,103 +1,109 @@
 body {
-	font-family: georgia;
-	line-height: 1.5em;
-	background-color: rgb(245, 245, 245);
+    font-family: georgia, serif;
+    line-height: 1.5em;
+    background-color: rgb(245, 245, 245);
 }
 
 .clear {
-	display: inline-block;
+    display: inline-block;
 }
 
-.clear:after,.book:after {
-	content: ".";
-	display: block;
-	height: 0;
-	clear: both;
-	visibility: hidden;
+.clear:after, .book:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
 }
 
 * html .clear {
-	height: 1%;
+    height: 1%;
 }
 
 .clear {
-	display: block;
+    display: block;
 }
 
 #book {
-	width: 1000px;
-	margin: auto;
-	border: 1px dotted rgb(210, 210, 210);
-	padding: 20px;
-	height: 600px;
-	overflow: hidden;
-	background-color: white;
+    width: 1000px;
+    margin: auto;
+    border: 1px dotted rgb(210, 210, 210);
+    padding: 20px;
+    /*	height: 600px;
+     overflow: hidden;
+     */
+    background-color: white;
 }
 
-a:visited,a:link {
-	color: rgb(90, 90, 90);
-	text-decoration: none;
+a:visited, a:link {
+    color: rgb(90, 90, 90);
+    text-decoration: none;
 }
 
 #toc-container {
-	float: left;
-	width: 150px;
-	font-size: x-small;
+    float: left;
+    width: 150px;
+    font-size: x-small;
 }
 
 h1 {
-	line-height: 1em;
+    line-height: 1em;
 }
 
 #toc {
-	list-style-type: none;
-	margin: 0;
-	padding: 1em 1em 10em 1em;
+    list-style-type: none;
+    margin: 0;
+    padding: 1em 1em 10em 1em;
 }
 
 #content {
-	float: right;
-	width: 800px;
-	padding-right: 1em;
-	padding-left: 1em;
-	border-left: 2px solid rgb(210, 210, 210);
+    float: right;
+    width: 800px;
+    padding-right: 1em;
+    padding-left: 1em;
+    border-left: 2px solid rgb(210, 210, 210);
+    font-size: 12px;
+}
+
+#content img {
+
 }
 
 #content-title {
-	
+
 }
 
 a.selected {
-	font-weight: bold;
-	color: black;
-	text-decoration: none;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
 }
 
 #total-size {
-	width: 500px;
-	height: 5px;
-	margin-left: 200px;
-	margin-top: 1em;
-	margin-bottom: 1em;
-	border: 1px solid rgb(200, 200, 200);
-	clear: right;
+    width: 500px;
+    height: 5px;
+    margin-left: 200px;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    border: 1px solid rgb(200, 200, 200);
+    clear: right;
 }
 
 #remaining {
-	background-color: rgb(200, 200, 200);
-	height: 5px;
-	width: 0;
+    background-color: rgb(200, 200, 200);
+    height: 5px;
+    width: 0;
 }
 
 #info p {
-	margin: o;
-	text-align: center;
-	color: gray;
-	font-size: small;
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    text-align: center;
+    color: gray;
+    font-size: small;
+    margin: 0;
+    padding: 0;
 }
 
 .indent {
-	padding-left: 1em;
+    padding-left: 1em;
 }
