Converting to infusion. It is working but multiple TODO tasks remain.

--- a/css/epubReader.css
+++ b/css/epubReader.css
@@ -1,5 +1,5 @@
 body {
-    font-family: georgia, serif;
+    font-family: verdana;
     line-height: 1.5em;
     background-color: rgb(245, 245, 245);
 }
