--- a/css/epubReader.css
+++ b/css/epubReader.css
@@ -1,11 +1,10 @@
-body {
-    font-family: verdana;
-    line-height: 1.5em;
+.epubReaderContainer {
     background-color: rgb(245, 245, 245);
-}
-
-.clear {
-    display: inline-block;
+    padding: 0;
+    width: 100%;
+    margin: 0;
+    top: 0;
+    left: 0;
 }
 
 .clear:after, .book:after {
@@ -15,9 +14,9 @@ body {
     clear: both;
     visibility: hidden;
 }
-
-* html .clear {
-    height: 1%;
+.centerAlign {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .clear {
@@ -25,42 +24,17 @@ body {
 }
 
 #book {
-    width: 1000px;
-    margin: auto;
+    position: relative;
+    top: 0;
     border: 1px dotted rgb(210, 210, 210);
-    padding: 20px;
-    overflow: hidden;
-    background-color: white;
+    height: 600px;
+    background-color: #FFFFFF;
+    padding: 0;
 }
 
 a:visited, a:link {
     color: rgb(90, 90, 90);
     text-decoration: none;
-}
-
-#toc-container {
-    float: left;
-    width: 150px;
-    font-size: x-small;
-}
-
-h1 {
-    line-height: 1em;
-}
-
-#toc {
-    list-style-type: none;
-    margin: 0;
-    padding: 1em 1em 10em 1em;
-}
-
-#chapter_content {
-    float: right;
-    width: 800px;
-    padding-right: 1em;
-    padding-left: 1em;
-    border-left: 2px solid rgb(210, 210, 210);
-    font-size: 12px;
 }
 
 a.selected {
@@ -69,31 +43,60 @@ a.selected {
     text-decoration: none;
 }
 
-#total-size {
-    width: 500px;
-    height: 5px;
-    margin-left: 200px;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    border: 1px solid rgb(200, 200, 200);
-    clear: right;
+#toc-container {
+    width: 150px;
+    font-size: x-small;
 }
 
-#remaining {
-    background-color: rgb(200, 200, 200);
-    height: 5px;
-    width: 0;
+#toc {
+    list-style-type: none;
+    margin: 0;
+    padding: 1em 1em 10em 1em;
 }
 
-#info p {
-    margin: 0;
-    text-align: center;
-    color: gray;
-    font-size: small;
-    margin: 0;
-    padding: 0;
+
+h1 {
+    line-height: 1em;
+}
+
+.content-title{
+    margin-top: 30px;
+    font-weight: bold;
+    font-size: medium;
 }
 
 .indent {
     padding-left: 1em;
+}
+
+#chapter_content {
+    top: 30px;
+    width: 750px;
+    /*height: 500px;*/
+    min-height: 500px;
+    overflow: hidden;
+    position: absolute;
+    padding: 25px;
+}
+
+#total-size {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    width: 500px;
+    height: 5px;
+    border: 1px solid rgb(200, 200, 200);
+}
+
+#remaining {
+    background-color: #000000;
+    height: 5px;
+    width: 0;
+}
+
+.rounded-corners {
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
 }
