--- a/css/epubReaderUIOptions.css
+++ b/css/epubReaderUIOptions.css
@@ -35,14 +35,14 @@
     display: table-cell;
     vertical-align: top;
     text-align:left;
-    margin: 25px;
-    padding-left: 100px;
+    padding-left: 15px;
 }
 
 .fl-uiOptions h2 {
     vertical-align: top;
     font-size: 20px;
     font-weight: bold;
+    margin-right: 10px;
 }
 
 .fl-theme-bw #remaining {
@@ -71,4 +71,9 @@
     margin-top: 0;
     margin-left: 25px;
     margin-bottom: 5px;
+}
+
+.flc-font-custom{
+    font-family: arial;
+    font-weight: bold;
 }
