--- a/css/epubReader.css
+++ b/css/epubReader.css
@@ -1,4 +1,4 @@
-.epubReaderContainer {
+.fl-epubReader-container {
     background-color: rgb(245, 245, 245);
     padding: 0;
     width: 100%;
@@ -7,7 +7,7 @@
     left: 0;
 }
 
-#book {
+.fl-epubReader-bookContainer {
     position: relative;
     top: 0;
     border: 1px dotted rgb(210, 210, 210);
@@ -17,12 +17,13 @@
     overflow: hidden;
 }
 
-a:visited, a:link {
+.fl-epubReader-container  a:visited,
+.fl-epubReader-container  a:link {
     color: rgb(90, 90, 90);
     text-decoration: none;
 }
 
-a.selected {
+.fl-epubReader-container a.selected {
     font-weight: bold;
     color: black;
     text-decoration: none;
@@ -39,21 +40,22 @@ a.selected {
     padding: 1em 1em 10em 1em;
 }
 
-h1 {
+.fl-epubReader-container h1 {
     line-height: 1em;
 }
 
-.content-title{
+.flc-epubReader-chapter-title{
     margin-top: 30px;
     font-weight: bold;
     font-size: medium;
+    margin-bottom: 10px
 }
 
-.indent {
+.fl-epubReader-container .indent {
     padding-left: 1em;
 }
 
-#chapter_content {
+.flc-epubReader-chapter-content {
     top: 30px;
     width: 750px;
     /*height: 500px;*/
@@ -63,7 +65,7 @@ h1 {
     overflow: hidden;
 }
 
-#total-size {
+.fl-epubReader-progressIndicator {
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
@@ -72,15 +74,39 @@ h1 {
     border: 1px solid rgb(200, 200, 200);
 }
 
-#remaining {
+.flc-epubReader-progressIndicator-completed {
     background-color: #000000;
     height: 5px;
     width: 0;
 }
 
-.rounded-corners {
+.fl-epubReader-container .rounded-corners {
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     -khtml-border-radius: 10px;
     border-radius: 10px;
+}
+
+/* Custom Scrollbar only works for Chrome and Safari */
+
+.fl-epubReader-container ::-webkit-scrollbar {
+    width: 12px;
+}
+
+/* Track */
+.fl-epubReader-container ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+/* Handle */
+.fl-epubReader-container ::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(255,0,0,0.8);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+.fl-epubReader-container ::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(255,0,0,0.4);
 }
