--- a/css/epubReader.css
+++ b/css/epubReader.css
@@ -44,7 +44,7 @@
     line-height: 1em;
 }
 
-.flc-epubReader-chapter-title{
+.flc-epubReader-chapter-title {
     margin-top: 30px;
     font-weight: bold;
     font-size: medium;
@@ -95,7 +95,7 @@
 
 /* Track */
 .fl-epubReader-container ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     -webkit-border-radius: 10px;
     border-radius: 10px;
 }
@@ -104,11 +104,12 @@
 .fl-epubReader-container ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: rgba(255,0,0,0.8);
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    background: rgba(255, 0, 0, 0.8);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
+
 .fl-epubReader-container ::-webkit-scrollbar-thumb:window-inactive {
-    background: rgba(255,0,0,0.4);
+    background: rgba(255, 0, 0, 0.4);
 }
 
 /* Tabs */
@@ -203,7 +204,7 @@
 
 .fl-epubReader-navigationContaniner .fl-tab-notes,
 .fl-epubReader-navigationContaniner .fl-tab-bookmarks,
-.fl-epubReader-navigationContaniner .fl-tab-general{
+.fl-epubReader-navigationContaniner .fl-tab-general {
     background-repeat: no-repeat;
     background-position: 10% 50%;
 }
@@ -215,7 +216,6 @@
 .fl-epubReader-tabsPanel .ui-tabs-selected .fl-tab-notes {
     background-image: url('../images/epubReader_icon_notes_default_16x16.png');
 }
-
 
 .fl-epubReader-tabsPanel .fl-tab-bookmarks {
     background-image: url('../images/epubReader_icon_bookmarks_defaultInverted_16x16.png');
@@ -231,4 +231,96 @@
 
 .fl-epubReader-tabsPanel .ui-tabs-selected .fl-tab-general {
     background-image: url('../images/epubReader_icon_general_default_16x16.png.png');
+}
+
+/* dialog */
+/* Following css rules are not inside epubReader container because jQuery UI dialog shift dialog div as a child of body */
+/* TODO Find a way to work around jQuery Dialog issue*/
+.ui-dialog {
+    -moz-border-radius: 0 5px 5px 5px;
+    -webkit-border-radius: 0 5px 5px 5px;
+    -khtml-border-radius: 0 5px 5px 5px;
+    border-color: #000;
+    border-width: 1px;
+    border-style: groove;
+    background-color: #FFFFFF;
+    position: absolute;
+    width: 300px;
+    overflow: hidden;
+}
+
+.ui-dialog .ui-dialog-titlebar {
+    background-color: #000000;
+    padding: .4em 1em;
+    position: relative;
+    text-align: center;
+}
+
+.ui-dialog .ui-dialog-title {
+    color: #FFF;
+    font-weight: bold;
+    font-size: 15px;
+    text-align: center;
+    margin: .1em 16px .1em 0;
+}
+
+.ui-dialog .ui-dialog-titlebar-close {
+    position: absolute;
+    right: .3em;
+    top: 50%;
+    width: 19px;
+    margin: -10px 0 0 0;
+    padding: 1px;
+    height: 18px;
+}
+
+.ui-dialog .ui-dialog-titlebar-close span {
+    display: block;
+    margin: 1px;
+}
+
+.ui-dialog .ui-dialog-titlebar-close:hover,
+.ui-dialog .ui-dialog-titlebar-close:focus {
+    padding: 0;
+}
+
+.ui-dialog .ui-dialog-content {
+    position: relative;
+    border: 0;
+    padding: .5em 1em;
+    background: none;
+    overflow: auto;
+    min-height: 0;
+    zoom: 1;
+    text-align: center;
+}
+
+.ui-dialog .ui-dialog-buttonpane {
+    text-align: left;
+    border-width: 1px 0 0 0;
+    background-image: none;
+}
+
+.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {
+    float: right;
+}
+
+.ui-dialog .ui-dialog-buttonpane button {
+    cursor: pointer;
+}
+
+.ui-dialog .ui-resizable-se {
+    width: 14px;
+    height: 14px;
+    right: 3px;
+    bottom: 3px;
+}
+
+.ui-draggable .ui-dialog-titlebar {
+    cursor: move;
+}
+.ui-dialog button {
+    color: #FFFFFF;
+    margin: 2px;
+    background-color: #000000;
 }
