--- a/css/epubReader.css
+++ b/css/epubReader.css
@@ -93,12 +93,12 @@
 .fl-epubReader-container ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: rgba(255, 0, 0, 0.8);
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    background: #CCCCCC;
+    -webkit-box-shadow: inset 0 0 6px #999999;
 }
 
 .fl-epubReader-container ::-webkit-scrollbar-thumb:window-inactive {
-    background: rgba(255, 0, 0, 0.4);
+    background: #f5f5f5;
 }
 
 /* Tabs */
