--- a/css/epubReader.css
+++ b/css/epubReader.css
@@ -323,6 +323,21 @@
     margin: 2px;
     background-color: #000000;
 }
+.fl-epubReader-errorNotification {
+    background-color: #FF0000;
+    color: #FFFFFF;
+}
+
+.fl-epubReader-successNotification {
+    background-color: green;
+    color: #FFFFFF;
+}
+
+.fl-epubReader-infoNotification {
+    background-color: #f5f5f5;
+    color: #000000;
+}
+
 .fl-epubReader-notification {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -334,15 +349,6 @@
     cursor: pointer;
     background-image: url("../images/epubReader_notification_background.png");
     background-repeat: repeat;
-}
-.fl-epubReader-errorNotification {
-    background-color: #FF0000;
-    color: #FFFFFF;
-}
-
-.fl-epubReader-successNotification {
-    background-color: green;
-    color: #FFFFFF;
 }
 
 .fl-epubReader-navigationContaniner  {
